<resources>
    <string name="app_name">First page</string>
    <string name="action_settings">Settings</string>
    <string name="Butc"> Butter Chicken\n\n  Rs.420</string>
    <string name="Chic"> Chicken Changezi\n\n  Rs. 452</string>
    <string name="Tanc"> Tandoori Chicken\n\n  Rs.372</string>
    <string name="Dalm"> Dal Makhani\n\n Rs.296</string>
    <string name="Afgc"> Afgani Chicken\n\n  Rs.286</string>
    <string name="ButT"> Butter Tandoori Chicken\n\n Rs.306</string>
    <string name="Kadp"> Kadai Paneer\n\n Rs.396</string>
    <string name="Kadc"> Kadai chicken\n\n  Rs.496</string>
    <string name="Panb"> Paneer Butter Masala\n\n  Rs.456</string>
    <string name="Chib"> Chicken Biryani\n\n Rs.456</string>
    <string name="Chis"> Chicken Soup\n\n  Rs.196</string>
    <string name="Kalt"> Kalimirchi Tandoori Chicken\n\n  Rs.396</string>
    <string name="Chiba"> Chicken Barra\n\n  Rs.409</string>
    <string name="Chit"> Chicken Tangri\n\n  Rs.296</string>
    <string name="Malt"> Malai Tangri\n\n  Rs.396</string>
    <string name="Kalta"> Kalimirchi Tangri\n\n Rs.256</string>
    <string name="Butci"> Butter Chicken Tangri\n\n  Rs.226</string>
    <string name="Chiti"> Chicken Tikka\n\n Rs.396</string>
    <string name="Chim"> Chicken Malai Tikka\n\n  Rs.496</string>
    <string name="Butch"> Butter Chicken Tikka\n\n Rs.296</string>
    <string name="Kalc"> Kalimirchi Chicken Tikka\n\n  Rs.246</string>
    <string name="Chibar"> Chicken Barra Tikka\n\n  Rs.496</string>
    <string name="Stuc"> Stuffed Chicken Tangri\n\n  Rs.346</string>
    <string name="Fist"> Fish Tikka\n\n Rs.576</string>
    <string name="Pant"> Paneer Tikka\n\n  Rs.576</string>
    <string name="Soys"> Soya Seekh Kabab\n\n  Rs.656</string>
    <string name="Malp"> Malai Paneer Tikka\n\n  Rs.556</string>
    <string name="Soymc"> Soya Masala Chaap\n\n  Rs.399</string>
    <string name="Afgch"> Afghani Chaap\n\n  Rs.456</string>
    <string name="Muts"> Mutton Seekh Rumali Roll\n\n Rs.406</string>
    <string name="Chisr"> Chicken Seekh Rumali Roll\n\n Rs.456</string>
    <string name="Chitr">Chicken Tikka Rumali Roll\n\n Rs.506</string>
    <string name="Mutsk">Mutton Seekh Kabab\n\n Rs.506</string>
    <string name="Chisk">Chicken Seekh Kabab\n\n Rs.556</string>
    <string name="Kalk">Kalmi Kabab\n\n Rs.606</string>
    <string name="Resk">Reshmi Kabab\n\n Rs.606</string>
    <string name="Chik">Chicken Korma\n\n Rs.706</string>
    <string name="Mutk">Mutton Korma\n\n Rs.656</string>
    <string name="Mixv">Mixed Veg.\n\n Rs.406</string>
    <string name="Shap">Shahi Paneer\n\n Rs.506</string>
    <string name="Cham">Chana Masala\n\n Rs.506</string>
    <string name="Panl">Paneer Lababdar\n\n Rs.706</string>
    <string name="Dalt">Dal Tadka\n\n Rs.506</string>
    <string name="Mutst">Mutton Stew\n\n Rs.706</string>
    <string name="Fisc">Fish Changezi\n\n Rs.656</string>
    <string name="Eggc">Egg Curry\n\n Rs.456</string>
    <string name="Chicu">Chicken Curry\n\n Rs.556</string>
    <string name="Hanc">Handi Chicken\n\n Rs.656</string>
    <string name="Tawc">Tawa Chicken\n\n Rs.656</string>
    <string name="Murm">Murg Musaliam\n\n Rs.606</string>
    <string name="Chil">Chicken Lababdar\n\n Rs.656</string>
    <string name="Chima">Chicken Masala\n\n Rs.566</string>
    <string name="Mutr">Mutton Rara\n\n Rs.756</string>
    <string name="Keem">Keema Muton\n\n Rs.656</string>
    <string name="Mutc">Mutton Curry\n\n Rs.656</string>
    <string name="Rogj">Rogan Josh\n\n Rs.676</string>
    <string name="Fiscu">Fish Curry\n\n Rs.656</string>
    <string name="Nonc">Non-Veg. Combo\n\nButter Chicken with choice\n of bread and salad\n\n Rs.656</string>
    <string name="Vegc">Veg.Combo\n\nChoice of curry with a \nchoice of bread and salad\n\n Rs.656</string>
    <string name="Mutb">Mutton Biryani\n\n Rs.576</string>
    <string name="Vegp">Veg Pulao\n\n Rs.456</string>
    <string name="Zeer">Zeera Rice\n\n Rs.356</string>
    <string name="Ster">Steamed Rice\n\n Rs.406</string>
    <string name="Rumr">Rumali Roti\n\n Rs.56</string>
    <string name="Butn">Butter Naan\n\n Rs.76</string>
    <string name="Lacp">Laccha Parantha\n\n Rs.96</string>
    <string name="Roti">Roti\n\n Rs.36</string>
    <string name="Stufn">Stuffed Naan\n\n Rs.86</string>
    <string name="Garn">Garlic Naan\n\n Rs.106</string>
    <string name="Pann">Paneer Naan\n\n Rs.116</string>
    <string name="Keen">Keema Naan\n\n Rs.156</string>
    <string name="Misr">Missi Roti\n\n Rs.96</string>
    <string name="Butr">Butter Roti\n\n Rs.56</string>
    <string name="Khar">Khamiri Roti\n\n Rs.66</string>
    <string name="Plan">Plain Naan\n\n Rs.76</string>
    <string name="Khe">Kheer\n\n Rs.256</string>
    <string name="Phi">Phirni\n\n Rs.256</string>
    <string name="Pop">Popular Products</string>
    <string name="Sou">Soups</string>
    <string name="Tan"> Tandoori Startes</string>
    <string name="Sta">Startes:Veg.</string>
    <string name="Rum">Rumali Rolls</string>
    <string name="Kab">Kabab Specialities</string>
    <string name="Des">Desi Ghee Special</string>
    <string name="Maiv">Main Course:Veg.</string>
    <string name="Main">Main Course Specialities:Non-Veg</string>
    <string name="Com">Combos:Veg. And Non-Veg.</string>
    <string name="Ric">Rice And Biryani</string>
    <string name="Bre">Breads</string>
    <string name="Dess">Desserts</string>

</resources>
