<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hemant.firstpage.Main6Activity"
    android:background="@drawable/app">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/arrow"
                android:text="@string/Malt"
                android:digits="@string/Malt"
                android:id="@+id/bt18"
                android:onClick="Qbtn18"
                android:textColor="@color/aaaaaa"
                android:textAlignment="textStart"
                android:paddingStart="10dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/arrow"
                android:text="@string/Chit"
                android:id="@+id/bt17"
                android:onClick="Qbtn17"
                android:textColor="@color/aaaaaa"
                android:textAlignment="textStart"
                android:paddingStart="10dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/arrow"
                android:text="@string/Fist"
                android:id="@+id/bt27"
                android:onClick="Qbtn27"
                android:textColor="@color/aaaaaa"
                android:textAlignment="textStart"
                android:paddingStart="10dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/arrow"
                android:text="@string/Stuc"
                android:id="@+id/bt26"
                android:onClick="Qbtn26"
                android:textColor="@color/aaaaaa"
                android:textAlignment="textStart"
                android:paddingStart="10dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/arrow"
                android:text="@string/Afgc"
                android:id="@+id/bt13"
                android:onClick="Qbtn13"
                android:textColor="@color/aaaaaa"
                android:textAlignment="textStart"
                android:paddingStart="10dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/arrow"
                android:text="@string/Kalt"
                android:id="@+id/bt14"
                android:onClick="Qbtn14"
                android:textColor="@color/aaaaaa"
                android:textAlignment="textStart"
                android:paddingStart="10dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/arrow"
                android:text="@string/Chib"
                android:id="@+id/bt16"
                android:onClick="Qbtn16"
                android:textColor="@color/aaaaaa"
                android:textAlignment="textStart"
                android:paddingStart="10dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/arrow"
                android:text="@string/Butci"
                android:id="@+id/bt20"
                android:onClick="Qbtn20"
                android:textColor="@color/aaaaaa"
                android:textAlignment="textStart"
                android:paddingStart="10dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/arrow"
                android:text="@string/Chim"
                android:id="@+id/bt22"
                android:onClick="Qbtn22"
                android:textColor="@color/aaaaaa"
                android:textAlignment="textStart"
                android:paddingStart="10dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/arrow"
                android:text="@string/Butch"
                android:id="@+id/bt23"
                android:onClick="Qbtn23"
                android:textColor="@color/aaaaaa"
                android:textAlignment="textStart"
                android:paddingStart="10dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/arrow"
                android:text="@string/Kalta"
                android:id="@+id/bt19"
                android:onClick="Qbtn19"
                android:textColor="@color/aaaaaa"
                android:textAlignment="textStart"
                android:paddingStart="10dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/arrow"
                android:text="@string/Chibar"
                android:id="@+id/bt25"
                android:onClick="Qbtn25"
                android:textColor="@color/aaaaaa"
                android:textAlignment="textStart"
                android:paddingStart="10dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/arrow"
                android:text="@string/ButT"
                android:id="@+id/bt15"
                android:onClick="Qbtn15"
                android:textColor="@color/aaaaaa"
                android:textAlignment="textStart"
                android:paddingStart="10dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/arrow"
                android:text="@string/Tanc"
                android:id="@+id/bt12"
                android:onClick="Qbtn12"
                android:textColor="@color/aaaaaa"
                android:textAlignment="textStart"
                android:paddingStart="10dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/arrow"
                android:text="@string/Kalc"
                android:id="@+id/bt24"
                android:onClick="Qbtn24"
                android:textColor="@color/aaaaaa"
                android:textAlignment="textStart"
                android:paddingStart="10dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/arrow"
                android:text="@string/Chiti"
                android:id="@+id/bt21"
                android:onClick="Qbtn21"
                android:textColor="@color/aaaaaa"
                android:textAlignment="textStart"
                android:paddingStart="10dp" />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>
