<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hemant.firstpage.Main15Activity"
    android:background="@drawable/app">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView7" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true">
            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/arrow"
                android:text="@string/Rumr"
                android:id="@+id/bt74"
                android:onClick="Qbtn74"
                android:textColor="@color/aaaaaa"
                android:textAlignment="textStart"
                android:paddingStart="10dp" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/arrow"
                android:text="@string/Butr"
                android:id="@+id/bt75"
                android:onClick="Qbtn75"
                android:textColor="@color/aaaaaa"
                android:textAlignment="textStart"
                android:paddingStart="10dp" />  <Button
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/arrow"
            android:text="@string/Lacp"
            android:id="@+id/bt76"
            android:onClick="Qbtn76"
            android:textColor="@color/aaaaaa"
            android:textAlignment="textStart"
            android:paddingStart="10dp" />  <Button
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/arrow"
            android:text="@string/Roti"
            android:id="@+id/bt77"
            android:onClick="Qbtn77"
            android:textColor="@color/aaaaaa"
            android:textAlignment="textStart"
            android:paddingStart="10dp" />  <Button
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/arrow"
            android:text="@string/Stufn"
            android:id="@+id/bt78"

            android:onClick="Qbtn78"
            android:textColor="@color/aaaaaa"
            android:textAlignment="textStart"
            android:paddingStart="10dp" />  <Button
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/arrow"
            android:text="@string/Garn"
            android:id="@+id/bt79"
            android:onClick="Qbtn79"
            android:textColor="@color/aaaaaa"
            android:textAlignment="textStart"
            android:paddingStart="10dp" />  <Button
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/arrow"
            android:text="@string/Pann"
            android:id="@+id/bt80"
            android:onClick="Qbtn80"
            android:textColor="@color/aaaaaa"
            android:textAlignment="textStart"
            android:paddingStart="10dp" />  <Button
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/arrow"
            android:text="@string/Keen"
            android:id="@+id/bt81"
            android:onClick="Qbtn81"
            android:textColor="@color/aaaaaa"
            android:textAlignment="textStart"
            android:paddingStart="10dp" />  <Button
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/arrow"
            android:text="@string/Misr"
            android:id="@+id/bt82"
            android:onClick="Qbtn82"
            android:textColor="@color/aaaaaa"
            android:textAlignment="textStart"
            android:paddingStart="10dp" />  <Button
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/arrow"
            android:text="@string/Butr"
            android:id="@+id/b83"
            android:onClick="Qbtn83"
            android:textColor="@color/aaaaaa"
            android:textAlignment="textStart"
            android:paddingStart="10dp" />  <Button
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/arrow"
            android:text="@string/Khar"
            android:id="@+id/bt84"
            android:onClick="84"
            android:textColor="@color/aaaaaa"
            android:textAlignment="textStart"
            android:paddingStart="10dp" />  <Button
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/arrow"
            android:text="@string/Plan"
            android:id="@+id/bt85"
            android:onClick="Qbtn85"
            android:textColor="@color/aaaaaa"
            android:textAlignment="textStart"
            android:paddingStart="10dp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
